create: styles for header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             class="logo__image">
         </a>
 
-        <form action="" class="search">
+        <form action="" class="search header__search">
           <input 
             type="text" 
             class="search__input" 
