--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+  <header class="navbar">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo">
           <img 
             src="img/horizontal-logo.svg" 
@@ -24,7 +24,7 @@
             class="logo__image">
         </a>
 
-        <form action="" class="search header__search">
+        <form action="" class="search navbar__search">
           <input 
             type="text" 
             class="search__input" 
@@ -45,31 +45,31 @@
         </a>
         <!-- /.user -->
       </div>
-      <!-- /.header-top -->
-      <ul class="header-menu">
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">All Deals</a>
+      <!-- /.navbar-top -->
+      <ul class="navbar-menu">
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">All Deals</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Hotels</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Hotels</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Activities</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Activities</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Hotel Day Packages</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Restaurants</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Restaurants</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Events</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Events</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Rodrigues</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Rodrigues</a>
         </li>
       </ul>
-      <!-- /.header-menu -->
+      <!-- /.navbar-menu -->
     </div>
     <!-- /.container -->
   </header>
