--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         </a>
         <!-- /.user -->
       </div>
-      <!-- /.navbar-top -->
+      <!-- /.navbar-top -->     
+    </div>
+    <!-- /.container -->
+   <div class="navbar-bottom">
+    <div class="container">
       <ul class="navbar-menu">
         <li class="navbar-menu__item">
           <a href="#" class="navbar-menu__link">All Deals</a>
@@ -72,6 +76,8 @@
       <!-- /.navbar-menu -->
     </div>
     <!-- /.container -->
+   </div>
+   <!-- /.navbar-bottom -->
   </header>
 </body>
 </html>
