--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </button>
         </form>
 
-        <a href="#" class="user">
+        <a href="#" class="user navbar__user">
           <img 
           src="img/user-avatar.jpg" 
           alt="avatar: Nathan" 
@@ -44,6 +44,11 @@
           <span class="user__name">Nathan</span>
         </a>
         <!-- /.user -->
+        <button class="menu-button navbar-top__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+        </button>
       </div>
       <!-- /.navbar-top -->     
     </div>
