--- a/index.html
+++ b/index.html
@@ -84,5 +84,19 @@
    </div>
    <!-- /.navbar-bottom -->
   </header>
+  <nav class="breadcrumb">
+    <ul class="breadcrumb-list">
+      <li class="breadcrumb-list__item">
+        <a href="#" class="breadcrumb-list__link">Home</a>
+      </li>      
+      <li class="breadcrumb-list__item">
+        <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+      </li>
+      <li class="breadcrumb-list__item">
+        Grand Hilton Hotel
+      </li>
+    </ul>
+  </nav>
+   <!-- /.breadcrumb -->
 </body>
 </html>
