--- a/index.html
+++ b/index.html
@@ -85,17 +85,20 @@
    <!-- /.navbar-bottom -->
   </header>
   <nav class="breadcrumb">
-    <ul class="breadcrumb-list">
-      <li class="breadcrumb-list__item">
+    <div class="container">
+      <ul class="breadcrumb-list">
+       <li class="breadcrumb-list__item">
         <a href="#" class="breadcrumb-list__link">Home</a>
-      </li>      
-      <li class="breadcrumb-list__item">
+       </li>      
+       <li class="breadcrumb-list__item">
         <a href="#" class="breadcrumb-list__link">Flash Offers</a>
-      </li>
-      <li class="breadcrumb-list__item">
-        Grand Hilton Hotel
-      </li>
-    </ul>
+       </li>
+       <li class="breadcrumb-list__item">
+         Grand Hilton Hotel
+       </li>
+      </ul>       
+    </div>
+    <!-- /.container -->
   </nav>
    <!-- /.breadcrumb -->
 </body>
