--- a/index.html
+++ b/index.html
@@ -138,13 +138,19 @@
                 <img src="img/slide.png" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide.png" alt="slide">
+                <img src="img/slide-2.png" alt="slide-2">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide.png" alt="slide">
-              </div>        
+                <img src="img/slide-3.png" alt="slide-3">
+              </div>   
+              <div class="swiper-slide">
+                <img src="img/slide-4.png" alt="slide-4">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/slide-5.png" alt="slide-5">
+              </div>
             </div>       
-                      
+
             <!-- If we need navigation buttons -->
             <button class="slider-button slider-button--prev"></button>
             <button class="slider-button slider-button--next"></button>          
