--- a/index.html
+++ b/index.html
@@ -158,6 +158,58 @@
            <!-- /.swiper-container -->
           </div>
         <!-- /.slider -->
+        <div class="hotel-right">
+          <div class="booking">
+            <div class="booking__info">
+              <div class="booking__price">
+                <span class="booking__start">price starts as</span>
+                <strong class="booking__pricetag">$ 8,500</strong>
+                <span class="booking__per-room">per room / night</span>
+              </div>
+              <!-- /.booking -->   
+              <div class="booking__room">
+                <div class="booking__text">
+                  <img src="img/user.svg" 
+                  alt="Icon: user" 
+                  class="booking__icon"
+                  />
+                  <span class="booking__description">2 x Guests</span>
+                </div>
+                <div class="booking__text">
+                  <img src="img/home.svg" 
+                  alt="Icon: home" 
+                  class="booking__icon"
+                  />
+                  <span class="booking__description">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.booking__room --> 
+            </div>
+            <!-- /.booking__info -->
+            <div class="booking__call-center">
+              <span class="booking__heading">Quick Booking</span>
+              <a class="booking__number" href="tel:12100">
+                <img src="img/phone-call.svg" alt="Icon: phone">
+                <span class="booking__num">12100</span>
+              </a>
+            </div>
+            <!-- /.booking__call-center -->
+            <button class="button booking__button">View Other Options</button>
+          </div>
+          <!-- /.booking -->
+          <div class="map">
+            <iframe 
+             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d864867.6299634256!2d-81.31951213437505!3d32.139794599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fc791b7607191b%3A0x98f2b586ea9394e7!2sGrand%20Hilton%20Head%20Inn%2C%20Ascend%20Hotel%20Collection!5e0!3m2!1sru!2sby!4v1626777375746!5m2!1sru!2sby" 
+             width="347" 
+             height="213"              
+             style="border:0;" 
+             allowfullscreen="" 
+             loading="lazy">
+            </iframe>
+          </div>
+          <!-- /.map -->
+        </div>
+        <!-- /.hotel-right -->
       </div>
       <!-- /.hotel-grid -->
     </div>
