create: media rules foк hotel section

--- a/index.html
+++ b/index.html
@@ -128,35 +128,35 @@
       </div>
       <!-- /.hotel-info -->
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="img/slide.png" alt="slide">
+                <img class="swiper-slide__image" src="img/slide.png" alt="slide">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide-2.png" alt="slide-2">
+                <img class="swiper-slide__image" src="img/slide-2.png" alt="slide-2">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide-3.png" alt="slide-3">
+                <img class="swiper-slide__image" src="img/slide-3.png" alt="slide-3">
               </div>   
               <div class="swiper-slide">
-                <img src="img/slide-4.png" alt="slide-4">
+                <img class="swiper-slide__image" src="img/slide-4.png" alt="slide-4">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide-5.png" alt="slide-5">
+                <img class="swiper-slide__image" src="img/slide-5.png" alt="slide-5">
               </div>
-            </div>       
-
+            </div> 
+              
             <!-- If we need navigation buttons -->
             <button class="slider-button slider-button--prev"></button>
             <button class="slider-button slider-button--next"></button>          
-           </div>
-           <!-- /.swiper-container -->
           </div>
+          <!-- /.swiper-container -->
+        </div>
         <!-- /.slider -->
         <div class="hotel-right">
           <div class="booking">
@@ -200,7 +200,7 @@
           <div class="map">
             <iframe 
              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d864867.6299634256!2d-81.31951213437505!3d32.139794599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fc791b7607191b%3A0x98f2b586ea9394e7!2sGrand%20Hilton%20Head%20Inn%2C%20Ascend%20Hotel%20Collection!5e0!3m2!1sru!2sby!4v1626777375746!5m2!1sru!2sby" 
-             width="347" 
+             width="100%" 
              height="213"              
              style="border:0;" 
              allowfullscreen="" 
